force-app/main/default/objects/LM_GDrive_File_Link__c/LM_GDrive_File_Link__c.object-meta.xml
<CustomObject>
    <label>GDrive File</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>GDrive File Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDrive Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>