force-app/main/default/objects/LM_GDrive_File_Link__c/fields/fileId__c.field-meta.xml
<CustomField>
    <fullName>fileId__c</fullName>
    <label>FileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>