force-app/main/default/objects/LM_GDrive_File_Link__c/fields/URL_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_Link__c</fullName>
    <formula>HYPERLINK(File_Url__c,  File_Name__c)</formula>
    <label>Nome do Ficheiro</label>
    <type>Text</type>
</CustomField>